<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small">

        <ImageView
            android:id="@+id/representativePhoto"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/representative_photo"
            app:profileImage="@{representative.official.photoUrl}" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            style="@style/electionNameStyle"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toTopOf="@id/representativePhoto"
            tools:text="TextView1dffffffffffffffffffffff" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/representativePartyStyle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            tools:text="TextView2dffffffff" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{representative.official.party}"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="TextView3dfffffffffff" />

        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="@dimen/image_width_small"
            android:layout_height="@dimen/image_height_small"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@+id/representativePhoto"
            app:layout_constraintEnd_toStartOf="@id/facebookIcon"
            android:contentDescription="@string/www_icon_desc"
            app:srcCompat="@drawable/ic_www" />



        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="@dimen/image_width_small"
            android:layout_height="@dimen/image_height_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:contentDescription="@string/facebook_icon_desc"
            app:layout_constraintBottom_toBottomOf="@+id/representativePhoto"
            app:layout_constraintEnd_toStartOf="@id/twitterIcon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="@dimen/image_width_small"
            android:layout_height="@dimen/image_height_small"
            app:srcCompat="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_icon_desc"
            app:layout_constraintBottom_toBottomOf="@+id/representativePhoto"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </layout>